adicionando melhorias[WIP]

--- a/frontend/src/components/Header/styles.css
+++ b/frontend/src/components/Header/styles.css
@@ -29,13 +29,15 @@
   height: 3em;
   width: 15vw;
   border: 0;
+  border-radius: 100px;
 }
 
 .buttontd {
   background-color: #fff;
   height: 3em;
-  width: 8vw;
+  width: 10vw;
   border: 0;
+  border-radius: 100px;
   text-align: right;
 }
 
@@ -61,37 +63,167 @@
   background-color: #b63379;
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+.topnav {
   overflow: hidden;
   background-color: #fe65b7;
+  padding-left: 10vw;
+  padding-right: 10vw;
 }
 
-li {
+.topnav a {
   float: left;
-}
-
-li a {
   display: block;
-  color: white;
+  color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-size: 17px;
 }
 
-/* Change the link color to #111 (black) on hover */
-li a:hover {
+.active {
+  background-color: #ffa3d4;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 17px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.topnav a:hover,
+.dropdown:hover .dropbtn {
   background-color: #b63379;
+  color: white;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.bottom {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  background-color: #ddd;
+}
+
+.bottomItem {
+  display: flex;
+  justify-content: space-between;
+  padding: 1em;
+  padding-left: 0;
+  padding-right: 0;
+  width: 15vw;
+}
+
+.bottomIcone {
+  color: #fff;
+  font-size: 3em;
 }
 
 @media only screen and (max-width: 480px) {
 }
+
 @media only screen and (max-width: 600px) {
+  .topnav a:not(:first-child),
+  .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {
+    float: none;
+  }
+  .topnav.responsive .dropdown-content {
+    position: relative;
+  }
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
 }
+
 @media only screen and (max-width: 768px) {
+  .mid {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 25vh;
+  }
+
+  .searchtd {
+    width: 45vw;
+  }
+
+  .buttontd {
+    width: 25vw;
+  }
+
+  .cover {
+    width: 75vw;
+  }
+
+  .topnav {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
+
 @media only screen and (max-width: 992px) {
   .top {
     display: none;
